# GENESIS

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  任务规划.md  任务进度.md  起源.md
configs/: llm_config.yaml  robot_config.yaml  world_config.yaml
docker/: Dockerfile
docs/: CONTRIBUTING.md  P0.3_知识预研笔记.md  architecture.md  lessons_learned.md  robot_spec.md  world_layout.drawio
docs/analysis/: P8_evaluation_report.md
scripts/: launch_world.py  run_genesis.py  test_brain.py  test_evaluation.py  test_p10.py  test_perception.py  test_robot.py  test_skills.py  test_stations.py
src/analysis/: __init__.py  energy_analysis.py  reliability_analysis.py  time_analysis.py
src/brain/: __init__.py  behavior_tree.py  dashboard.py  error_handler.py  llm_client.py  strategic_planner.py  task_executor.py
src/genesis/: __init__.py
src/genesis/control/: __init__.py  base_controller.py  ik_solver.py  impedance_controller.py  multi_robot_manager.py  navigator.py  path_follower.py  self_repair.py  trajectory_planner.py
src/genesis/control/skills/: __init__.py  base_skill.py  charge.py  feed_station.py  place.py  retrieve_station.py  side_grasp.py  top_grasp.py  warehouse_ops.py
src/genesis/robot/: __init__.py  battery.py  robot_interface.py  sensors.py
src/genesis/utils/: __init__.py  config.py  geometry.py  logging.py  types.py
src/genesis/world/: __init__.py  charging_dock.py  items.py  mine_zone.py  path_network.py  realistic_energy.py  recipe_graph.py  recipes.py  solar_array.py  terrain.py  warehouse.py  world_manager.py
src/optimization/: __init__.py  energy_optimizer.py  parallel_scheduler.py  path_optimizer.py  skill_optimizer.py
src/perception/: __init__.py  dock_detection.py  pose_estimation.py  resource_tracker.py  segmentation.py  semantic_map.py
src/workstation/: __init__.py  assembler.py  base_station.py  battery_manufacturing.py  fabricator.py  realistic_manufacturing.py  semiconductor_fab.py  smelter.py  solar_manufacturing.py  station_interface.py  station_manager.py
src/world/: battery_items.py  battery_recipes.py  solar_items.py  solar_recipes.py
tests/: __init__.py  test_utils.py
tests/benchmark/: __init__.py  test_performance.py
tests/integration/: __init__.py  test_battery_chain.py  test_chain_recipe.py  test_energy_fault.py  test_full_genesis.py  test_make_arm.py  test_single_recipe.py  test_solar_chain.py
