[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-sim"
version = "0.1.0"
description = "Generalized Embodied Neural Entity for Self-Iterating Synthesis - Robot Self-Replication Simulation System"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "GENESIS Team", email = "genesis@example.com"}
]
keywords = ["robotics", "simulation", "self-replication", "isaac-sim", "mujoco"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "mujoco>=3.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "matplotlib>=3.7.0",
    "pillow>=9.5.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "gymnasium>=0.28.0",
    "stable-baselines3>=2.0.0",
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.3.0",
    "ruff>=0.0.265",
    "mypy>=1.2.0",
    "pre-commit>=3.3.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]
isaac = [
    # Isaac Sim dependencies (installed via Omniverse Launcher)
    # These are for reference only
    "omni.isaac.core",
    "omni.isaac.kit",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "transformers>=4.30.0",
    "accelerate>=0.21.0",
]
perception = [
    "opencv-python>=4.7.0",
    "scikit-image>=0.20.0",
    "open3d>=0.17.0",
    "trimesh>=3.21.0",
]
ros = [
    # ROS2 dependencies (installed via apt)
    # These are for reference only
    "rclpy",
    "sensor_msgs",
]
all = [
    "genesis-sim[dev,isaac,llm,perception]",
]

[project.scripts]
genesis = "genesis.cli:main"
genesis-train = "genesis.scripts.train:main"
genesis-eval = "genesis.scripts.evaluate:main"

[project.urls]
Homepage = "https://github.com/your-org/genesis-sim"
Documentation = "https://genesis-sim.readthedocs.io"
Repository = "https://github.com/your-org/genesis-sim"
Issues = "https://github.com/your-org/genesis-sim/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["genesis*", "control*", "perception*"]

[tool.setuptools.package-data]
genesis = ["py.typed", "*.yaml", "*.json"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | assets
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip without strict
    "ARG001", # unused function argument
]

[tool.ruff.isort]
known-first-party = ["genesis"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "mujoco.*",
    "torch.*",
    "numpy.*",
    "scipy.*",
    "matplotlib.*",
    "cv2.*",
    "open3d.*",
    "trimesh.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=genesis --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src/genesis"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
